Added restaurant recycler view

--- a/app/src/main/res/layout/restaurant_activity.xml
+++ b/app/src/main/res/layout/restaurant_activity.xml
@@ -4,23 +4,23 @@
                                                    android:id="@+id/main"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
-<!--                                                   tools:context=".view.CustomerListView">-->
+    <!--                                                   tools:context=".view.RestaurantListView">-->
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/customer_view"
+            android:id="@+id/restaurant_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:layout_editor_absoluteX="1dp"
             tools:layout_editor_absoluteY="1dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_register_customer"
+            android:id="@+id/fab_register_restaurant"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
             android:clickable="true"
-            android:onClick="registerCustomer"
+            android:onClick="registerRestaurant"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@android:drawable/ic_menu_add" />
