--- a/app/src/main/res/layout/menu_activity.xml
+++ b/app/src/main/res/layout/menu_activity.xml
@@ -4,12 +4,12 @@
                                                    android:id="@+id/main"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
-    <!--                                                   tools:context=".view.RestaurantListView">-->
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/restaurant_view"
+            android:id="@+id/menu_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:layout_editor_absoluteX="1dp"
             tools:layout_editor_absoluteY="1dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
