--- a/app/src/main/res/layout/menuitem_view_item.xml
+++ b/app/src/main/res/layout/menuitem_view_item.xml
@@ -15,14 +15,14 @@
 
         <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="10dp"
+                android:layout_width="143dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                app:srcCompat="@mipmap/restaurant1"
-                tools:srcCompat="@mipmap/restaurant1"/>
+                app:srcCompat="@mipmap/burguer1"
+                tools:srcCompat="@mipmap/burguer1"/>
 
         <LinearLayout
-                android:layout_width="30dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
@@ -30,12 +30,12 @@
             <TextView
                     android:id="@+id/item_name"
                     android:layout_width="match_parent"
-                    android:layout_height="53dp"/>
+                    android:layout_height="wrap_content" />
 
             <TextView
-                    android:id="@+id/item_address"
+                    android:id="@+id/item_description"
                     android:layout_width="match_parent"
-                    android:layout_height="53dp"/>
+                    android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
