--- a/app/src/main/res/layout/menuitem_view_item.xml
+++ b/app/src/main/res/layout/menuitem_view_item.xml
@@ -23,19 +23,27 @@
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
             <TextView
                     android:id="@+id/item_name"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="24dp"/>
 
             <TextView
                     android:id="@+id/item_description"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="24dp"/>
         </LinearLayout>
+
+        <Button
+                android:id="@+id/add_menuitem_button"
+                android:text="+"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:padding="26dp"
+                />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
