--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="my_action_bar_color">#FF5722</color>
+    <color name="my_action_bar_color_dark">#E64A19</color>
 </resources>
