--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.RestaurantApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <item name="colorPrimary">@color/my_action_bar_color</item>
+    <item name="colorPrimaryVariant">@color/my_action_bar_color_dark</item>
     </style>
-
-
     <style name="Theme.RestaurantApp" parent="Base.Theme.RestaurantApp"/>
 </resources>
