--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -21,15 +21,17 @@
 
     <TextView
             android:text="Register"
-            android:layout_width="90dp"
-            android:layout_height="31dp"
+            android:layout_width="72dp"
+            android:layout_height="35dp"
             android:id="@+id/textView"
+            android:textSize="18sp"
+            android:textColor="@android:color/black"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintVertical_bias="0.124"/>
+            app:layout_constraintVertical_bias="0.123"/>
 
     <EditText
             android:layout_width="335dp"
@@ -92,6 +94,22 @@
             app:layout_constraintVertical_bias="0.433"
             android:hint="+34 012345678"
             android:autofillHints=""/>
+
+    <Button
+            android:text="Already have an account?"
+            android:layout_width="177dp"
+            android:layout_height="44dp"
+            android:id="@+id/button"
+            android:onClick="loginPage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.897"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="8sp"
+            android:visibility="visible"
+            android:textColor="@android:color/black"
+            android:background="@android:color/transparent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
