--- a/app/src/main/res/layout/menuitem_view_item.xml
+++ b/app/src/main/res/layout/menuitem_view_item.xml
@@ -6,23 +6,23 @@
                                                    android:layout_height="wrap_content">
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="409dp"
+            android:layout_height="117dp"
             android:orientation="horizontal"
             android:padding="26dp"
-            tools:layout_editor_absoluteX="1dp"
-            tools:layout_editor_absoluteY="1dp">
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="-1dp">
 
         <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="143dp"
+                android:layout_width="141dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 app:srcCompat="@mipmap/burguer1"
                 tools:srcCompat="@mipmap/burguer1"/>
 
         <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="331dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical">
@@ -35,15 +35,14 @@
             <TextView
                     android:id="@+id/item_description"
                     android:layout_width="match_parent"
-                    android:layout_height="24dp"/>
+                    android:layout_height="38dp"/>
         </LinearLayout>
 
-        <Button
-                android:id="@+id/add_menuitem_button"
-                android:text="+"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:padding="26dp"
-                />
+        <RadioButton
+                android:layout_width="103dp"
+                android:layout_height="65dp"
+                android:id="@+id/radioButton"
+                android:layout_weight="1"/>
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
