--- a/app/src/main/res/layout/basket_activity.xml
+++ b/app/src/main/res/layout/basket_activity.xml
@@ -1,7 +1,9 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
     <!-- Toolbar -->
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -10,10 +12,61 @@
             android:background="@color/my_action_bar_color"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+    <!-- TextView at the top -->
+    <TextView
+            android:text="Basket"
+            android:layout_width="72dp"
+            android:layout_height="35dp"
+            android:id="@+id/textView"
+            android:textSize="18sp"
+            android:textColor="@android:color/black"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintVertical_bias="0.123"/>
+
+    <!-- Buttons -->
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/basket_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="16dp" />
+            android:padding="16dp"/>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="16dp"
+            android:layout_gravity="bottom"
+            android:gravity="center"
+            android:id="@+id/linearLayout">
+
+        <TextView
+                android:text=""
+                android:layout_width="72dp"
+                android:layout_height="35dp"
+                android:id="@+id/totalPrice"
+                android:textSize="18sp"
+                android:textColor="@android:color/black"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintVertical_bias="0.123"
+                />
+
+        <Button
+                android:id="@+id/registerMeal"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Reserve"
+                android:onClick="addOrder"/>
+
+    </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
